# bodeg-on

./: .gitignore  README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/include/unity_msgs/: ArmPose.h  ArmTarget.h  CamImgs.h  GripperSuck.h  Imgserv.h  ImgservRequest.h  ImgservResponse.h  OrderPickerCameraRotation.h  OrderPickerDirection.h  OrderPickerLifter.h  OrderPickerPosition.h  OrderPickerVelocity.h  Pose.h  PoseRequest.h  PoseResponse.h  Position.h  PositionRequest.h  PositionResponse.h
devel/lib/pkgconfig/: manipulador.pc  orderpicker.pc  ros_tcp_endpoint.pc  unity_msgs.pc
devel/share/manipulador/cmake/: manipuladorConfig.cmake
devel/share/orderpicker/cmake/: orderpickerConfig.cmake
devel/share/ros_tcp_endpoint/cmake/: ros_tcp_endpointConfig.cmake
devel/share/unity_msgs/cmake/: unity_msgs-msg-extras.cmake  unity_msgs-msg-paths.cmake  unity_msgsConfig.cmake
rutina_caja/: rutina_caja.ino
sketch_dec31a/: sketch_dec31a.ino
src/manipulador/: CMakeLists.txt
src/manipulador/launch/: init_sim.launch
src/manipulador/src/: ManipuladorUI.py  SuckForceExample.py  TargetPositionPub.py  emitROSVIdeo.py  republishArmPose.py
src/manipulador/src/Manipulador/: __main__.py
src/orderpicker/: CMakeLists.txt
src/orderpicker/src/: ControlManual.py
src/unity_msgs/: CMakeLists.txt  package.xml
src/unity_msgs/msg/: ArmPose.msg  ArmTarget.msg  GripperSuck.msg  OrderPickerCameraRotation.msg  OrderPickerDirection.msg  OrderPickerLifter.msg  OrderPickerVelocity.msg
src/unity_msgs/srv/: Imgserv.srv  Pose.srv  Position.srv
(+78 files in other folders)
